添加了JMS监听消息测试

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,7 @@ spring.devtools.restart.exclude=WEB-INF/**
 spring.thymeleaf.prefix=classpath:/templates/
 server.port=8090
 
+spring.artemis.host=192.168.124.128
+spring.artemis.user=root
+spring.artemis.password=root
+spring.jms.template.default-destination=tacocloud.order.queue
