--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,9 @@ spring.devtools.restart.exclude=WEB-INF/**
 spring.thymeleaf.prefix=classpath:/templates/
 server.port=8090
 
-spring.artemis.host=192.168.124.128
+#ActiveMQ配置
+spring.artemis.host=localhost
 spring.artemis.user=root
 spring.artemis.password=root
+#声明消息发送的目的地
 spring.jms.template.default-destination=tacocloud.order.queue
