--- a/pom.xml
+++ b/pom.xml
@@ -32,11 +32,11 @@
             <!--</exclusions>-->
         <!--</dependency>-->
 
-        <!--使用log4j作为日志工具-->
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-log4j</artifactId>
-        </dependency>
+<!--        &lt;!&ndash;使用log4j作为日志工具&ndash;&gt;-->
+<!--        <dependency>-->
+<!--            <groupId>org.springframework.boot</groupId>-->
+<!--            <artifactId>spring-boot-starter-log4j</artifactId>-->
+<!--        </dependency>-->
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -104,6 +104,8 @@
             <artifactId>spring-boot-starter-security</artifactId>
         </dependency>
 
+
+        <!--        消息代理-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-artemis</artifactId>
