添加了web Service协议的测试类

--- a/pom.xml
+++ b/pom.xml
@@ -121,6 +121,13 @@
             <artifactId>spring-integration-file</artifactId>
         </dependency>
 
+        <!--Spring的执行机构-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+
+
     </dependencies>
 
     <build>
