--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.devtools.restart.additional-paths=src/main/java
 
 spring.devtools.restart.exclude=WEB-INF/**
 spring.thymeleaf.prefix=classpath:/templates/
-server.port=8090
+server.port=8080
 
 #ActiveMQ配置
 spring.artemis.host=localhost
@@ -17,3 +17,5 @@ spring.artemis.user=root
 spring.artemis.password=root
 #声明消息发送的目的地
 spring.jms.template.default-destination=tacocloud.order.queue
+
+amozon.amozonID = 1255
